--- a/Someren1920F/SomerenDAL/SomerenDAL.csproj
+++ b/Someren1920F/SomerenDAL/SomerenDAL.csproj
@@ -45,7 +45,9 @@
     <Compile Include="Base.cs" />
     <Compile Include="FillDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Room_DAO.cs" />
     <Compile Include="Student_DAO.cs" />
+    <Compile Include="Teacher_DAO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SomerenModel\SomerenModel.csproj">
