--- a/Someren1920F/SomerenDAL/SomerenDAL.csproj
+++ b/Someren1920F/SomerenDAL/SomerenDAL.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room_DAO.cs" />
     <Compile Include="Student_DAO.cs" />
+    <Compile Include="SetParameter.cs" />
     <Compile Include="Teacher_DAO.cs" />
   </ItemGroup>
   <ItemGroup>
