--- a/Someren1920F/TestConnection/App.config
+++ b/Someren1920F/TestConnection/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="TESTDB" connectionString="Data Source=localhost;Initial Catalog=ProjectSomeren;Integrated Security=True"
+    <add name="connectionString" connectionString="Data Source=localhost;Initial Catalog=ProjectDatabase;Integrated Security=True"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
