--- a/Someren1920F/SomerenDAL/SomerenDAL.csproj
+++ b/Someren1920F/SomerenDAL/SomerenDAL.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room_DAO.cs" />
     <Compile Include="Student_DAO.cs" />
+    <Compile Include="Supervisor_DAO.cs" />
     <Compile Include="Teacher_DAO.cs" />
   </ItemGroup>
   <ItemGroup>
