--- a/Someren1920F/SomerenLogic/SomerenLogic.csproj
+++ b/Someren1920F/SomerenLogic/SomerenLogic.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activity_Service.cs" />
     <Compile Include="Order_Service.cs" />
     <Compile Include="Product_Service.cs" />
     <Compile Include="Room_Service.cs" />
