--- a/Someren1920F/SomerenDAL/SomerenDAL.csproj
+++ b/Someren1920F/SomerenDAL/SomerenDAL.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activity_DAO.cs" />
     <Compile Include="Base.cs" />
+    <Compile Include="Supervisor_DAO.cs" />
     <Compile Include="FillDatabase.cs" />
     <Compile Include="LoginDAL.cs" />
     <Compile Include="Order_DAO.cs" />
