--- a/Someren1920F/SomerenModel/SomerenModel.csproj
+++ b/Someren1920F/SomerenModel/SomerenModel.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activity.cs" />
+    <Compile Include="Event.cs" />
     <Compile Include="Supervisor.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Product.cs" />
