--- a/Someren1920F/SomerenLogic/SomerenLogic.csproj
+++ b/Someren1920F/SomerenLogic/SomerenLogic.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activity_Service.cs" />
+    <Compile Include="Supervisor_Service.cs" />
     <Compile Include="Event_Service.cs" />
     <Compile Include="Order_Service.cs" />
     <Compile Include="Product_Service.cs" />
